<resources>
    <!-- General -->
    <string name="app_name">Drop Messages</string>
    <string name="app_name_formatted">Drop Messages</string>
    <string name="placeholder">Lorem Ipsum</string>
    <string name="placeholder_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet non sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet non</string>
    <string name="placeholder_number">10</string>
    <string name="logo_content_desc">Drop Message Logo</string>

    <!-- Sign up / Sign in -->
    <string name="username_hint"> Username…</string>
    <string name="password_hint"> Password…</string>
    <string name="email_hint">Email…</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_in_option_label">ALREADY HAVE AN ACCOUNT?</string>
    <string name="sign_up_option_label">DON\'T HAVE AN ACCOUNT?</string>
    <string name="forgot_pw_label">Forgot password?</string>
    <string name="forgot_pw_button">Recover</string>
    <string name="send_password_reset">SEND RESET EMAIL</string>

    <!-- Action hints -->
    <string name="pull_up_start_hint">Pull up to start!</string>
    <string name="pull_down_return_hint">Pull down to go back</string>
    <string name="pull_up_drops_hint">Pull up to see more drops</string>
    <string name="pull_down_drops_hint">Pull down to see drop again</string>
    <string name="pull_up_refresh_hint">Pull up to check for new drops</string>

    <!-- Status texts -->
    <string name="generic_loading">Loading . . .</string>
    <string name="refresh_loading">Checking…</string>
    <string name="drop_stack_empty">No more drops…</string>

    <!-- Bottom nav bar button labels -->
    <string name="top_drops_label">Top</string>
    <string name="latest_drops_label">Latest</string>
    <string name="create_drop_label">Create Drop</string>
    <string name="random_drops_label">Random</string>
    <string name="map_label">Map</string>
    <string name="my_drops_label">My Drops</string>

    <!-- no internet -->
    <string name="no_internet_text">No Internet connection detected!</string>
    <string name="no_internet_button">Retry</string>

    <!-- API Urls -->
    <string name="sign_up_url">https://drop-messages.herokuapp.com/api/register/</string>
    <string name="get_token_url">https://drop-messages.herokuapp.com/api/token/</string>
    <string name="web_socket_url">wss://drop-messages.herokuapp.com/ws/</string>

    <!-- card labels -->
    <string name="card_index_label">Welcome!</string>
    <string name="card_register_label">Create an Account</string>
    <string name="card_login_label">Log in</string>
    <string name="card_message_hint">Enter your message…</string>

    <!-- Toolbar -->
    <string name="logout">Logout</string>
    <string name="refresh">Refresh Location</string>
</resources>
