<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".TestActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:orientation="vertical">

        <com.example.drop_messages_android.viewpager.VerticalViewPager
            android:id="@+id/pager"
            android:layout_width="0dp"
            android:layout_height="450dp"

            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingTop="30dp"
            android:paddingBottom="50dp"

            app:layout_constraintBottom_toTopOf="@+id/btn_panel_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/btn_panel_container"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/bottom_btns_frame"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_get_top"
                    style="@style/nav_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_mail_black"
                    android:text="@string/top_drops_label"
                    android:textAppearance="@style/nav_button" />

                <Button
                    android:id="@+id/btn_get_latest"
                    style="@style/nav_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_mail_black"
                    android:text="@string/latest_drops_label"
                    android:textAppearance="@style/nav_button"/>

                <Button
                    android:id="@+id/btn_create_drop"
                    style="@style/nav_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_mail_create"
                    android:text="@string/create_drop_label"
                    android:textAppearance="@style/nav_button"/>
            </TableRow>

            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_get_random"
                    style="@style/nav_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_mail_black"
                    android:text="@string/random_drops_label"
                    android:textAppearance="@style/nav_button"/>

                <Button
                    android:id="@+id/btn_map"
                    style="@style/nav_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_mail_black"
                    android:text="@string/map_label"
                    android:textAppearance="@style/nav_button"/>

                <Button
                    android:id="@+id/btn_my_drops"
                    style="@style/nav_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_person_black"
                    android:text="@string/my_drops_label"
                    android:textAppearance="@style/nav_button"/>
            </TableRow>

        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>