<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:elevation="0dp"
    android:stateListAnimator="@null">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shadow"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        app:srcCompat="@drawable/ic_drop_card" />

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:stateListAnimator="@null">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="66dp"

            android:contentDescription="@string/logo_content_desc"
            android:scaleX="0.9"
            android:scaleY="0.85"
            android:src="@drawable/ic_drop_message" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_input_email"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_text">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/LightHintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_send_password_reset"
            style="@style/MediumButtonText"
            android:layout_width="185dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_rounded"
            android:elevation="40dp"
            android:text="@string/send_password_reset" />


        <TextView
            android:id="@+id/tv_send_password_reset_output"
            style="@style/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            />

        <TableLayout
            android:id="@+id/progress_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/progress_send_password_reset"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:indeterminateDrawable="@drawable/custom_circle_progressbar" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_progress"
                        style="@style/DarkHintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="10dp"
                        android:text="@string/generic_loading" />

                    <ImageView
                        android:id="@+id/img_white_cover"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="45dp"
                        android:layout_marginTop="0dp"
                        android:background="@color/colorWhiteText" />
                </FrameLayout>

            </TableRow>

        </TableLayout>

    <TextView
        android:id="@+id/tv_card_label"
        style="@style/CardLabelText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>

</FrameLayout>