<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:elevation="0dp"
    android:stateListAnimator="@null">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/ic_drop_card"
        android:elevation="2dp"
        android:background="@drawable/shadow"
        android:stateListAnimator="@null"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:clipChildren="false"

        android:clipToPadding="false"
        android:elevation="10dp"
        android:stateListAnimator="@null">

        <TextView
            android:id="@+id/tv_title"
            style="@style/AppNameText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="@string/app_name_formatted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="125dp"
            android:layout_height="108dp"
            android:layout_marginTop="24dp"
            android:contentDescription="Logo"
            android:src="@drawable/ic_drop_message_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_pull_up_hint"
            style="@style/DarkHintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/pull_up_start_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/hint_action_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:clickable="false"
            android:elevation="60dp"
            android:focusable="true"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_arrow_up"
            android:tint="#00B90000"
            app:backgroundTint="@android:color/transparent"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_card_label"
            style="@style/card_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/card_index_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>